<resources>
    <string name="app_name">Artist</string>
    <string name="title_art">Art</string>
    <string name="title_shows">Shows</string>
    <string name="title_settings">Settings</string>


    <string name="token_file_key">com.artapp.podstreleny.palo.artist.token_file_key</string>
    <string name="token_entry_value">com.artapp.podstreleny.palo.artist.token_entry_value</string>
    <string name="token_entry_date">com.artapp.podstreleny.palo.artist.token_entry_date</string>


    <string name="art_page_artworks_title">Artworks</string>
    <string name="art_page_artists_title">Artists</string>
    <string name="art_page_genes_title">Genes</string>
    <string name="error_not_defined_position">Not position is not defined!</string>
    <string name="error_no_internet_connection">No internet connection!</string>
    <string name="error_unauthorized_connection">You are unauthorized to use this app!</string>

    <string name="transition_photo_detail_main">transition_photo_detail</string>
    <string name="shows_title">Shows</string>
    <string name="detail_show_title">Show detail</string>

    <string name="button_refetch">Refetch</string>
    <string name="button_retry">retry</string>


    <string name="preferences_notification_key">preferences_notification_key</string>
    <string name="preferences_notification_title">Daily art notification</string>
    <string name="preferences_notification_summary_on">Notifications On</string>
    <string name="preferences_notification_summary_off">Notifications Off</string>
    <string name="notification_channel_name">Daily inspiration</string>
    <string name="notification_channel_description">Providing daily notification for user</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="show_menu_upcoming_title">Upcoming</string>
    <string name="show_menu_running_title">Running</string>
    <string name="show_menu_closed_title">Closed</string>
    <string name="show_menu_current_title">Current</string>
    <string name="widget_artwork_text">New artworks</string>
    <string name="widget_error_no_data">No artworks loaded yet</string>
    <string name="notification_default_title">Daily motivation</string>
    <string name="notification_default_content_text">Check out this artwork!</string>
    <string name="show_detail_solo_person">Person</string>
    <string name="show_detail_group_people">Group of people</string>
    <string name="content_description_icon_status_of_show">Icon, status of show</string>
    <string name="content_description_icon_opening_days">Icon, Opening days</string>
    <string name="content_description_icon_recomended_group">Icon, recommended group</string>
    <string name="content_description_photo_show_detail">Photo detail of show</string>
    <string name="content_description_photo_artwork_detail">Photo detail of artwork </string>
    <string name="content_description_photo_gene">Photo of gene</string>
    <string name="artist_detail_gender">Gender:</string>
    <string name="artist_detail_birthday">Birthday:</string>
    <string name="artist_detail_death_day">Death day:</string>
    <string name="artist_detail_location">Location:</string>
    <string name="artist_detail_nationality">Nationality:</string>
    <string name="artist_detail_hometown">Hometown:</string>
    <string name="artwork_detail_category_label">Category:</string>
    <string name="artwork_detail_day_label">Date:</string>
    <string name="artwork_detail_published_label">Published:</string>
    <string name="artwork_detail_website_label">Website:</string>
    <string name="artwork_detail_rights_label">Rights:</string>
    <string name="published_true">Yes</string>


    <string name="filter_content_description">Filter shows</string>


</resources>
